--- a/progettoFinale/index.html
+++ b/progettoFinale/index.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   </head>
   <body>
-   <button class="btn btn-primary" id="btnLoadData">Carica i dati</button>
+   
+    <button class="btn btn-primary" id="btnLoadData">Carica i dati</button>
+    <table class="table">
+      <thead>
+        <tr><td>Title</td><td>Completed</td></tr>
+      </thead>
+      <tbody id="tbody">
+
+      </tbody>
+    </table>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
